--- a/OOP/OOP-L1-Feng/Exercise3/exercise.html
+++ b/OOP/OOP-L1-Feng/Exercise3/exercise.html
@@ -1,19 +1,22 @@
 <html>
    <head>
       <title>OOP In Fairy Tales</title>
-        <link rel="stylesheet" href="../../../htmllayout.css">
+      <base href = "https://fengxiong322.github.io/">
+      <link rel="stylesheet" href="htmllayout.css">
    </head>
    <body>
   <nav>
-   <a href= "../../../index.html">Home</a>
+   <a href= "index.html">Home</a>
    <p></p>
-   <a class = "current" href = "../../OOPmenu.html">OOP</a>
+   <a class = "current" href = "OOPmenu.html">OOP</a>
    <p></p>
-   <a href="../../../GUI/GUImenu.html">GUI</a>
+   <a href="GUI/GUImenu.html">GUI</a>
    <p></p>
-   <a href="../../../Projects/projects.html">Projects</a>
+   <a href="Recursion/recursion.html">Recursion</a>
    <p></p>
-   <a href="../../../about.html">About</a>
+   <a href="Projects/projects.html">Projects</a>
+   <p></p>
+   <a href="about.html">About</a>
  </nav>
   <header>
   <h2>Fairy Tale OOP</h2>
@@ -23,13 +26,13 @@
     <u><b><p>TABLE OF CONTENTS</p></b></u>
     <table style="width:100%">
       <tr>
-        <td><a href="../OOPLesson1.html">OOP Lesson 1</a></td>
+        <td><a href="OOP/OOP-L1-Feng/OOPLesson1.html">OOP Lesson 1</a></td>
       </tr><tr>
-        <td><a href = "../Exercise1/exercise.html">Exercise 1</a></td>
+        <td><a href = "OOP/OOP-L1-Feng/Exercise1/exercise.html">Exercise 1</a></td>
       </tr><tr>
-        <td><a href="../Exercise2/exercise.html">Exercise 2</a></td>
+        <td><a href="OOP/OOP-L1-Feng/Exercise2/exercise.html">Exercise 2</a></td>
       </tr><tr>
-        <td class = "current"><a href="">Exercise 3</a></td>
+        <td class = "current"><a href="OOP/OOP-L1-Feng/Exercise3/exercise.html">Exercise 3</a></td>
       </tr>
     </table>
   </aside>
