--- a/OOP/OOP-L2-Feng/OOPLesson2.html
+++ b/OOP/OOP-L2-Feng/OOPLesson2.html
@@ -1,50 +1,22 @@
 <html>
    <head>
       <title>OOP In Fairy Tales</title>
-        <link rel="stylesheet" href="../../htmllayout.css">
-        <style type="text/css">
-    body #greentable{
-    width:100%;
-    border-collapse:collapse;
-    border:1px solid #39f400;
-    color:#39f400;
-    background-color: #FFF;
-    text-align: left;
-    }
-    body #yellowtable{
-    width:100%;
-    border-collapse:collapse;
-    border:1px solid #fff200;
-    color:#fff200;
-    background-color: #FFF;
-    text-align: left;
-    }
-    body #redtable{
-    width:100%;
-    border-collapse:collapse;
-    border:1px solid #ff0000;
-    color:#ff0000;
-    background-color: #FFF;
-    text-align: left;
-    }
-    #bigwords{
-      font-size: 30;
-      font: "Helvetica"
-
-    }
-  </style>
+      <base href = "https://fengxiong322.github.io/">
+      <link rel="stylesheet" href="htmllayout.css">
    </head>
    <body>
   <nav>
-   <a href= "../../index.html">Home</a>
+   <a href= "index.html">Home</a>
    <p></p>
-   <a class = "current" href = "../OOPmenu.html">OOP</a>
+   <a class = "current" href = "OOP/OOPmenu.html">OOP</a>
    <p></p>
-   <a href="../../GUI/GUImenu.html">GUI</a>
+   <a href="GUI/GUImenu.html">GUI</a>
    <p></p>
-   <a href="../../Projects/projects.html">Projects</a>
+   <a href="Recursion/recursion.html">Recursion</a>
    <p></p>
-   <a href="../../about.html">About</a>
+   <a href="Projects/projects.html">Projects</a>
+   <p></p>
+   <a href="about.html">About</a>
  </nav>
   <header>
   <h2>Fairy Tale OOP</h2>
@@ -54,15 +26,15 @@
     <u><b><p>TABLE OF CONTENTS</p></b></u>
     <table style="width:100%">
       <tr>
-        <td><a href="../OOPmenu.html">What is OOP?</a></td>
+        <td><a href="OOP/OOPmenu.html">What is OOP?</a></td>
       </tr><tr>
-        <td><a href = "../OOP-FairyTales/OOPFairyTales.html">Fairy Tale OOP</a></td>
+        <td><a href = "OOP/OOP-FairyTales/OOPFairyTales.html">Fairy Tale OOP</a></td>
       </tr><tr>
-        <td><a href="../OOP-L1-Feng/OOPLesson1.html">OOP Lesson 1</a></td>
+        <td><a href="OOP/OOP-L1-Feng/OOPLesson1.html">OOP Lesson 1</a></td>
       </tr><tr>
-        <td><a href="../OOP-L2-Feng/OOPLesson2.html">OOP Lesson 2</a></td>
+        <td><a href="OOP/OOP-L2-Feng/OOPLesson2.html">OOP Lesson 2</a></td>
       </tr><tr>
-        <td><a href="../OOP-L3-Feng/OOPLesson3.html">OOP Lesson 3</a></td>
+        <td><a href="OOP/OOP-L3-Feng/OOPLesson3.html">OOP Lesson 3</a></td>
       </tr>
     </table>
   </aside>
