--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 	   <p></p>
 	   <a href="GUI/GUImenu.html">GUI</a>
 	   <p></p>
+		 <a href="Recursion/recursion.html">Recursion</a>
+		 <p></p>
 	   <a href="Projects/projects.html">Projects</a>
 	   <p></p>
 	   <a href="about.html">About</a>
@@ -34,6 +36,8 @@
         <td><a href = "OOP/OOPmenu.html">OOP</a></td>
       </tr><tr>
         <td><a href = "GUI/GUImenu.html">GUI</a></td>
+      </tr><tr>
+        <td><a href="Recursion/recursion.html">Recursion</a></td>
       </tr><tr>
         <td><a href = "Projects/projects.html">Projects</a></td>
       </tr><tr>
