--- a/OOP/OOP-FairyTales/OOPFairyTales.html
+++ b/OOP/OOP-FairyTales/OOPFairyTales.html
@@ -1,7 +1,8 @@
 <html>
    <head>
       <title>OOP In Fairy Tales</title>
-      <link rel="stylesheet" href="../../htmllayout.css">
+      <base href = "https://fengxiong322.github.io/">
+      <link rel="stylesheet" href="htmllayout.css">
       <style type="text/css">
          body #greentable{
          width:100%;
@@ -35,15 +36,17 @@
    </head>
    <body>
       <nav>
-         <a href= "../../index.html">Home</a>
+         <a href= "index.html">Home</a>
          <p></p>
-         <a class = "current" href = "../OOPmenu.html">OOP</a>
+         <a class = "current" href = "OOP/OOPmenu.html">OOP</a>
          <p></p>
-         <a href="../../GUI/GUImenu.html">GUI</a>
+         <a href="GUI/GUImenu.html">GUI</a>
          <p></p>
-         <a href="../../Projects/projects.html">Projects</a>
+    		 <a href="Recursion/recursion.html">Recursion</a>
+    		 <p></p>
+         <a href="Projects/projects.html">Projects</a>
          <p></p>
-         <a href="../../about.html">About</a>
+         <a href="about.html">About</a>
       </nav>
       <header>
          <h2>Fairy Tale OOP</h2>
@@ -57,21 +60,21 @@
             </u>
             <table style="width:100%">
                <tr>
-                  <td><a href="../OOPmenu.html">What is OOP?</a></td>
+                  <td><a href="OOP/OOPmenu.html">What is OOP?</a></td>
                </tr>
                <tr>
-                  <td class = "current"><a href = "OOPFairyTales.html">Fairy Tale OOP</a></td>
+                  <td class = "current"><a href = "OOP/OOP-FairyTales/OOPFairyTales.html">Fairy Tale OOP</a></td>
                </tr>
                <tr>
-                  <td><a href="../OOP-L1-Feng/OOPLesson1.html">OOP Lesson 1</a></td>
+                  <td><a href="OOP/OOP-L1-Feng/OOPLesson1.html">OOP Lesson 1</a></td>
                </tr>
                <tr>
-                  <td><a href="../OOP-L2-Feng/OOPLesson2.html">OOP Lesson 2</a></td>
+                  <td><a href="OOP/OOP-L2-Feng/OOPLesson2.html">OOP Lesson 2</a></td>
                </tr>
                <tr>
-                  <td><a href="../OOP-L3-Feng/OOPLesson3.html">OOP Lesson 3</a></td>
+                  <td><a href="OOP/OOP-L3-Feng/OOPLesson3.html">OOP Lesson 3</a></td>
                </tr><tr>
-                 <td><a href="../Advanced1/advanced.html">Advanced OOP 1</a></td>
+                 <td><a href="OOP/Advanced1/advanced.html">Advanced OOP 1</a></td>
                </tr>
             </table>
          </aside>
