--- a/OOP/OOPmenu.html
+++ b/OOP/OOPmenu.html
@@ -15,6 +15,8 @@
    <p></p>
    <a href="GUI/GUImenu.html">GUI</a>
    <p></p>
+   <a href="Recursion/recursion.html">Recursion</a>
+   <p></p>
    <a href="Projects/projects.html">Projects</a>
    <p></p>
    <a href="about.html">About</a>
