--- a/GUI/GUImenu.html
+++ b/GUI/GUImenu.html
@@ -4,7 +4,7 @@
   <title>Feng's Portfolio</title>
   <base href = "https://fengxiong322.github.io/">
   <link rel="icon" href="favicon.ico">
-  <link rel="stylesheet" href="../htmllayout.css">
+  <link rel="stylesheet" href="htmllayout.css">
 </head>
 
 <body>
