--- a/GUI/Gui-intro/JFrameintro.html
+++ b/GUI/Gui-intro/JFrameintro.html
@@ -61,13 +61,13 @@ var btn = document.getElementsByClassName("modalbutton");
 for(int i = 0; i < modal.length;i ++){
   window.onclick = function(event) {
     if (event.target == modal) {
-      modal.style.display = "none";
+      modal[i].style.display = "none";
     }
   }
 }
 for(int i = 0; i < btn.length;i ++){
-btn.onclick = function() {
-  modal.style.display = "block";
+btn[i].onclick = function() {
+  modal[i].style.display = "block";
 }
 }
 </script>
