--- a/GUI/GUI-intro/JFrameintro.html
+++ b/GUI/GUI-intro/JFrameintro.html
@@ -51,21 +51,21 @@
     <button class = "modalbutton">Gui Example</button>
     <div class = "modalbackground">
       <div class = "modal">
-        <h1>GUI Example</h1>
+        <img src="GUI/GUI-intro/JFrame.png" alt="JFrame Example">
+        <iframe src = "GUI/GUI-intro/JFrameTest.java"></iframe>
+        <iframe src = "GUI/GUI-intro/JFrameTestApp.java"></iframe>
       </div>
     </div>
-
+    <p>That was the basic format of a java swing GUI window. In this example, it is empty, but we will be adding more to it later. For we should start with the basics. Creating a new window, in which we will be adding new items.</p>
     <script>
 var modal = document.getElementsByClassName('modalbackground');
 var btn = document.getElementsByClassName("modalbutton");
-for(int i = 0; i < modal.length;i ++){
+for(let i = 0; i < modal.length; i++){
   window.onclick = function(event) {
-    if (event.target == modal) {
+    if (event.target == modal[i]) {
       modal[i].style.display = "none";
     }
   }
-}
-for(int i = 0; i < btn.length;i ++){
 btn[i].onclick = function() {
   modal[i].style.display = "block";
 }
