--- a/GUI/GUI-intro/JFrameintro.html
+++ b/GUI/GUI-intro/JFrameintro.html
@@ -51,7 +51,7 @@
     <button class = "modalbutton">Gui Example</button>
     <div class = "modalbackground">
       <div class = "modal">
-        <img src="GUI/GUI-intro/JFrame.png" alt="JFrame Example">
+        <img src="GUI/GUI-intro/JFrame.PNG" alt="JFrame Example">
         <iframe src = "GUI/GUI-intro/JFrameTest.java"></iframe>
         <iframe src = "GUI/GUI-intro/JFrameTestApp.java"></iframe>
       </div>
