--- a/GUI/GUI-intro/JFrameintro.html
+++ b/GUI/GUI-intro/JFrameintro.html
@@ -32,9 +32,9 @@
     <u><b><p>TABLE OF CONTENTS</p></b></u>
     <table style="width:100%">
       <tr>
-        <td><a class = "current" href="GUI/GUImenu.html">Welcome to GUI!</a></td>
+        <td><a href="GUI/GUImenu.html">Welcome to GUI!</a></td>
       </tr><tr>
-        <td><a href = "GUI/GUI-intro/JFrameintro.html">JFrame introduction</a></td>
+        <td class = "current"><a href = "GUI/GUI-intro/JFrameintro.html">JFrame introduction</a></td>
       </tr><tr>
         <td><a href="GUI/GUI-L1-Feng/GUILesson1.html">GUI Lesson 1</a></td>
       </tr><tr>
