--- a/GUI/GUImenu.html
+++ b/GUI/GUImenu.html
@@ -31,7 +31,7 @@
     <u><b><p>TABLE OF CONTENTS</p></b></u>
     <table style="width:100%">
       <tr>
-        <td><a class = "current" href="GUI/GUImenu.html">Welcome to GUI!</a></td>
+        <td class = "current"><a href="GUI/GUImenu.html">Welcome to GUI!</a></td>
       </tr><tr>
         <td><a href = "GUI/GUI-intro/JFrameintro.html">JFrame introduction</a></td>
       </tr><tr>
