--- a/OOP/OOP-L3-Feng/OOPLesson3.html
+++ b/OOP/OOP-L3-Feng/OOPLesson3.html
@@ -26,7 +26,7 @@
     <u><b><p>TABLE OF CONTENTS</p></b></u>
     <table style="width:100%">
       <tr>
-        <td><a class = "current" href="">What is OOP?</a></td>
+        <td><a href="OOP/OOPmenu.html">What is OOP?</a></td>
       </tr><tr>
         <td><a href = "OOP/OOP-FairyTales/OOPFairyTales.html">Fairy Tale OOP</a></td>
       </tr><tr>
@@ -34,7 +34,7 @@
       </tr><tr>
         <td><a href="OOP/OOP-L2-Feng/OOPLesson2.html">OOP Lesson 2</a></td>
       </tr><tr>
-        <td><a href="OOP/OOP-L3-Feng/OOPLesson3.html">OOP Lesson 3</a></td>
+        <td class = "current"><a href="OOP/OOP-L3-Feng/OOPLesson3.html">OOP Lesson 3</a></td>
       </tr>
     </table>
   </aside>
