Styling fix and advanced.html links

--- a/OOP/OOP-L1-Feng/Exercise3/exercise.html
+++ b/OOP/OOP-L1-Feng/Exercise3/exercise.html
@@ -19,7 +19,7 @@
    <a href="about.html">About</a>
  </nav>
   <header>
-  <h2>Fairy Tale OOP</h2>
+  <h2>Exercise 3</h2>
 </header>
  <section>
   <aside>
