--- a/OOP/OOP-L2-Feng/OOPLesson2.html
+++ b/OOP/OOP-L2-Feng/OOPLesson2.html
@@ -35,6 +35,8 @@
         <td><a href="OOP/OOP-L2-Feng/OOPLesson2.html">OOP Lesson 2</a></td>
       </tr><tr>
         <td><a href="OOP/OOP-L3-Feng/OOPLesson3.html">OOP Lesson 3</a></td>
+      </tr><tr>
+        <td><a href="OOP/Advanced1/advanced.html">Advanced OOP 1</a></td>
       </tr>
     </table>
   </aside>
