--- a/OOP/Advanced1/advanced.html
+++ b/OOP/Advanced1/advanced.html
@@ -49,11 +49,11 @@
   <article>
     <h1>Advanced</h1>
     <p>This is the end of the OOP series. This will be a long topic. Here, we will be discussing various high level object oriented programming concepts.</p>
-    <a href = "#polymorphism">Polymorphism</a>
-    <a href = "#programmingDesign">Programming Design</a>
-    <a href = "#encapsulation">Encapsulation</a>
-    <a href = "#inheritance">Inheritance</a>
-    <a href = "#relations">Class Relations</a>
+    <a href = "OOP/Advanced1/advanced.html#polymorphism">Polymorphism</a>
+    <a href = "OOP/Advanced1/advanced.html#programmingDesign">Programming Design</a>
+    <a href = "OOP/Advanced1/advanced.html#encapsulation">Encapsulation</a>
+    <a href = "OOP/Advanced1/advanced.html#inheritance">Inheritance</a>
+    <a href = "OOP/Advanced1/advanced.html#relations">Class Relations</a>
     <br>
     <br>
     <br>
