Fixed CSS added new Tabs

--- a/GUI/GUImenu.html
+++ b/GUI/GUImenu.html
@@ -17,6 +17,10 @@
    <p></p>
    <a href="Recursion/recursion.html">Recursion</a>
    <p></p>
+   <a href="Arrays/arraysandarraylists.html">Arrays and Arraylists</a>
+   <p></p>
+   <a href="SearchSort/searchsort.html">Search and Sort</a>
+   <p></p>
    <a href="Projects/projects.html">Projects</a>
    <p></p>
    <a href="about.html">About</a>
