--- a/OOP/OOP-FairyTales/OOPFairyTales.html
+++ b/OOP/OOP-FairyTales/OOPFairyTales.html
@@ -4,29 +4,23 @@
       <base href = "https://fengxiong322.github.io/">
       <link rel="stylesheet" href="htmllayout.css">
       <style type="text/css">
+         body td{
+           width:100%;
+           border-collapse:collapse;
+           background-color: #eaeaea;
+           text-align: left;
+         }
          body #greentable{
-         width:100%;
-         border-collapse:collapse;
          border:1px solid #39f400;
          color:#39f400;
-         background-color: #FFF;
-         text-align: left;
          }
          body #yellowtable{
-         width:100%;
-         border-collapse:collapse;
          border:1px solid #fff200;
          color:#fff200;
-         background-color: #FFF;
-         text-align: left;
          }
          body #redtable{
-         width:100%;
-         border-collapse:collapse;
          border:1px solid #ff0000;
          color:#ff0000;
-         background-color: #FFF;
-         text-align: left;
          }
          #bigwords{
          font-size: 30;
@@ -43,6 +37,10 @@
          <a href="GUI/GUImenu.html">GUI</a>
          <p></p>
     		 <a href="Recursion/recursion.html">Recursion</a>
+    		 <p></p>
+    		 <a href="Arrays/arraysandarraylists.html">Arrays and Arraylists</a>
+    		 <p></p>
+    		 <a href="SearchSort/searchsort.html">Search and Sort</a>
     		 <p></p>
          <a href="Projects/projects.html">Projects</a>
          <p></p>
