--- a/about.html
+++ b/about.html
@@ -17,6 +17,10 @@
         <p></p>
         <a href="Recursion/recursion.html">Recursion</a>
         <p></p>
+   		 <a href="Arrays/arraysandarraylists.html">Arrays and Arraylists</a>
+   		 <p></p>
+   		 <a href="SearchSort/searchsort.html">Search and Sort</a>
+   		 <p></p>
         <a href="Projects/projects.html">Projects</a>
         <p></p>
         <a class = "current" href="about.html">About</a>
@@ -38,6 +42,10 @@
         <td><a href="GUI/GUImenu.html">GUI</a></td>
       </tr><tr>
         <td><a href="Recursion/recursion.html">Recursion</a></td>
+      </tr><tr>
+        <td><a href="Arrays/arraysandarraylists.html">Arrays and Arraylists</a></td>
+      </tr><tr>
+        <td><a href="SearchSort/searchsort.html">Search and Sort</a></td>
       </tr><tr>
         <td><a href="Projects/projects.html">Projects</a></td>
       </tr><tr>
