--- a/Recursion/recursion.html
+++ b/Recursion/recursion.html
@@ -42,7 +42,7 @@
 
   <article>
     <h1>What is Recursion?</h1>
-    <p>Recursion is when a method calls itself, to break a problem down into smaller subproblems, until it reachs a trivial base problem. So what does this actually mean when programming? Below is the general set up of a recursive method</p>
+    <p>Recursion is when a method calls itself, to break a problem down into smaller subproblems, until it reachs a trivial base problem. So what does this actually mean when programming? Below is the general set up of a recursive method:</p>
     <pre class = "codeSample">
 public int aRecursiveMethod(int input){
 	if(baseCaseHasBeenReached){
@@ -81,7 +81,11 @@ public int aRecursiveMethod(int input){
     <p>Recursion doesn't always have to follow this structure. Depending on the type of problem you are given, you can use a multitude of recursion methods. Here, we will be talking about 2 other types of recursion "formats": mutual and tail recursion</p>
 
     <h1>Mutual Recursion</h1>
-    <p>Mutual Recursion is when two or methods call each other recursively. To visualize this, imagine </p>
+    <p>Mutual Recursion is when two or methods call each other recursively. To visualize this, imagine two mirrors facing each other. The light reflects between the two mirrors, many times, creating multiple images of each mirror. Each image is smaller than the next, until there is no more space for an image to fit. Simliarly, two mutually recursive methods will call each other, until a simple base case is reached.</p>
+    <figure>
+      <img src="" alt="Recursive Discord Example">
+      <figcaption>Mutual Recursion</figcaption>
+    </figure>
     <h1>Tail Recursion</h1>
     <p>So</p>
   </article>
