--- a/OOP/OOP-FairyTales/OOPFairyTales.html
+++ b/OOP/OOP-FairyTales/OOPFairyTales.html
@@ -4,21 +4,21 @@
       <base href = "https://fengxiong322.github.io/">
       <link rel="stylesheet" href="htmllayout.css">
       <style type="text/css">
-         body td{
+         article td{
            width:100%;
            border-collapse:collapse;
            background-color: #eaeaea;
            text-align: left;
          }
-         body #greentable{
+         article #greentable{
          border:1px solid #39f400;
          color:#39f400;
          }
-         body #yellowtable{
+         article #yellowtable{
          border:1px solid #fff200;
          color:#fff200;
          }
-         body #redtable{
+         article #redtable{
          border:1px solid #ff0000;
          color:#ff0000;
          }
