--- a/OOP/OOP-FairyTales/OOPFairyTales.html
+++ b/OOP/OOP-FairyTales/OOPFairyTales.html
@@ -4,7 +4,7 @@
       <base href = "https://fengxiong322.github.io/">
       <link rel="stylesheet" href="htmllayout.css">
       <style type="text/css">
-         article td{
+         article td, tr{
            width:100%;
            border-collapse:collapse;
            background-color: #eaeaea;
