--- a/OOP/Advanced1/advanced.html
+++ b/OOP/Advanced1/advanced.html
@@ -65,10 +65,7 @@
     <h1 id = "polymorphism">Polymorphism</h1>
     <p>The first concept we will talk about is polymorphism</p>
     <h1 id = "programmingDesign">Programming Design</h1>
-    <p>The next part is programming design. Although some programmers don't believe in creating a coding stucture, it is important to allow other people to read your code clearly. One standard way to graphically organize your code is uml. uml stands for Unified Modeling Language. There are many different types of uml diagrams. One of them is the class diagram. This diagram can help describe your classes, and what they do. Let me show you what I mean...</p>
-    <div class = "uml">
-
-    </div>
+    <p>The next part is programming design. Having a proper program structure is important, because it allows other people to read your code clearly. One standard way to graphically organize your code is uml. uml stands for Unified Modeling Language. There are many different types of uml diagrams. One of them is the class diagram. This diagram can help describe your classes, and what they do. Let me show you what I mean...</p>
     <h1 id = "encapsulation">Encapsulation</h1>
     <p></p>
     <h1 id = "inheritance">Inheritance</h1>
