--- a/OOP/OOP-FairyTales/OOPFairyTales.html
+++ b/OOP/OOP-FairyTales/OOPFairyTales.html
@@ -7,7 +7,7 @@
          article td, tr{
            width:100%;
            border-collapse:collapse;
-           background-color: #eaeaea;
+           background-color: #000;
            text-align: left;
          }
          article #greentable{
