--- a/OOP/OOP-L1-Feng/Exercise1/exercise.html
+++ b/OOP/OOP-L1-Feng/Exercise1/exercise.html
@@ -87,7 +87,10 @@
       Animal d = new Animal("Cat", 10);
       Animal e = new Animal("Goose", 10);
   }
-}
+}</pre>
+     
+ <h2>Your Turn!</2>
+     <p>To practise this concept, try to represent a Car, a House, and a Student. To help you, I will provide the uml</p>
   </article>
 </section>
 </body>
