--- a/OOP/OOP-L1-Feng/Exercise1/exercise.html
+++ b/OOP/OOP-L1-Feng/Exercise1/exercise.html
@@ -89,8 +89,10 @@
   }
 }</pre>
      
- <h2>Your Turn!</2>
-     <p>To practise this concept, try to represent a Car, a House, and a Student. To help you, I will provide the uml</p>
+ <h2>Your Turn!</h2>
+<p>To practise this concept, try to represent a Car, a House, and a Student. To help you, I will provide an outline for each:</p>
+     <pre class = "codeSample">
+     </pre>
   </article>
 </section>
 </body>
