--- a/OOP/Advanced1/advanced.html
+++ b/OOP/Advanced1/advanced.html
@@ -2,18 +2,16 @@
 <html>
 <head>
   <title>Feng's Portfolio</title>
-  <base href = "https://fengxiong322.github.io/">
+  <base href = "fengxiong322.github.io\"><script type="text/javascript" src="interactions.js"></script>
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="htmllayout.css">
 </head>
 
-<body>
-  <nav>
+<body><nav>
+  <button class= "menubutton" onclick = "sideBar()"></button>
    <a href= "index.html">Home</a>
    <p></p>
    <a class = "current" href = "OOP/OOPmenu.html">OOP</a>
-   <p></p>
-   <a href="GUI/GUImenu.html">GUI</a>
    <p></p>
    <a href="Recursion/recursion.html">Recursion</a>
    <p></p>
@@ -43,7 +41,7 @@
       </tr><tr>
         <td><a href="OOP/OOP-L2-Feng/OOPLesson2.html">OOP Lesson 2</a></td>
       </tr><tr>
-        <td><a href="OOP/OOP-L1-Feng/OOPLesson3.html">OOP Lesson 3</a></td>
+        <td><a href="OOP/OOP-L3-Feng/OOPLesson3.html">OOP Lesson 3</a></td>
       </tr><tr>
         <td class = "current"><a href="OOP/Advanced1/advanced.html">Advanced OOP 1</a></td>
       </tr>
@@ -53,10 +51,10 @@
   <article>
     <h1>Advanced</h1>
     <p>This is the end of the OOP series. This will be a long topic. Here, we will be discussing various high level object oriented programming concepts.</p>
-    <a href = "OOP/Advanced1/advanced.html#polymorphism">Polymorphism</a>
-    <a href = "OOP/Advanced1/advanced.html#programmingDesign">Programming Design</a>
-    <a href = "OOP/Advanced1/advanced.html#encapsulation">Encapsulation</a>
-    <a href = "OOP/Advanced1/advanced.html#inheritance">Inheritance</a>
+    <a href = "OOP/Advanced1/advanced.html#polymorphism">Polymorphism</a><br>
+    <a href = "OOP/Advanced1/advanced.html#programmingDesign">Programming Design</a><br>
+    <a href = "OOP/Advanced1/advanced.html#encapsulation">Encapsulation</a><br>
+    <a href = "OOP/Advanced1/advanced.html#inheritance">Inheritance</a><br>
     <a href = "OOP/Advanced1/advanced.html#relations">Class Relations</a>
     <br>
     <br>
@@ -65,10 +63,7 @@
     <h1 id = "polymorphism">Polymorphism</h1>
     <p>The first concept we will talk about is polymorphism</p>
     <h1 id = "programmingDesign">Programming Design</h1>
-    <p>The next part is programming design. Although some programmers don't believe in creating a coding stucture, it is important to allow other people to read your code clearly. One standard way to graphically organize your code is uml. uml stands for Unified Modeling Language. There are many different types of uml diagrams. One of them is the class diagram. This diagram can help describe your classes, and what they do. Let me show you what I mean...</p>
-    <div class = "uml">
-
-    </div>
+    <p>The next part is programming design. Having a proper program structure is important, because it allows other people to read your code clearly. One standard way to graphically organize your code is uml. uml stands for Unified Modeling Language. There are many different types of uml diagrams. One of them is the class diagram. This diagram can help describe your classes, and what they do. Let me show you what I mean...</p>
     <h1 id = "encapsulation">Encapsulation</h1>
     <p></p>
     <h1 id = "inheritance">Inheritance</h1>
