--- a/OOP/OOP-L3-Feng/OOPLesson3.html
+++ b/OOP/OOP-L3-Feng/OOPLesson3.html
@@ -1,16 +1,14 @@
 <html>
    <head>
       <title>OOP In Fairy Tales</title>
-      <base href = "https://fengxiong322.github.io/">
+      <base href = "fengxiong322.github.io\"><script type="text/javascript" src="interactions.js"></script>
       <link rel="stylesheet" href="htmllayout.css">
    </head>
-   <body>
-  <nav>
+   <body><nav>
+  <button class= "menubutton" onclick = "sideBar()"></button>
    <a href= "index.html">Home</a>
    <p></p>
    <a class = "current" href = "">OOP</a>
-   <p></p>
-   <a href="GUI/GUImenu.html">GUI</a>
    <p></p>
    <a href="Recursion/recursion.html">Recursion</a>
    <p></p>
@@ -23,7 +21,7 @@
    <a href="about.html">About</a>
  </nav>
   <header>
-  <h2>Fairy Tale OOP</h2>
+  <h2>OOP Lesson 3</h2>
 </header>
  <section>
   <aside>
@@ -200,7 +198,7 @@ public static void main(String[]args){
 
 <p>Booleans cannot be cannot be casted into another data type, nor can it be casted into by another data type</p>
 
-<p>9. Explain the difference between static/class and instance/member methods.</p>
+<b><u><p>9. Explain the difference between static/class and instance/member methods.</p></u></b>
 
 <p>Static methods do not rely on values created with an object. They are consistent throughout all objects, and can even be used without an object. On the other hand, instance methods are object specific. They require an object in order to be run.</p>
 
