--- a/OOP/OOPmenu.html
+++ b/OOP/OOPmenu.html
@@ -2,18 +2,16 @@
 <html>
 <head>
   <title>Feng's Portfolio</title>
-  <base href = "https://fengxiong322.github.io/">
+  <base href = "fengxiong322.github.io\"><script type="text/javascript" src="interactions.js"></script>
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="htmllayout.css">
 </head>
 
-<body>
-  <nav>
+<body><nav>
+  <button class= "menubutton" onclick = "sideBar()"></button>
    <a href= "index.html">Home</a>
    <p></p>
    <a class = "current" href = "OOP/OOPmenu.html">OOP</a>
-   <p></p>
-   <a href="GUI/GUImenu.html">GUI</a>
    <p></p>
    <a href="Recursion/recursion.html">Recursion</a>
    <p></p>
