--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -2,18 +2,16 @@
 <html>
 <head>
   <title>Feng's Portfolio</title>
-  <base href = "https://fengxiong322.github.io/">
+  <base href = "fengxiong322.github.io\"><script type="text/javascript" src="interactions.js"></script>
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="htmllayout.css">
 </head>
 
-<body>
-  <nav>
+<body><nav>
+  <button class= "menubutton" onclick = "sideBar()"></button>
    <a href= "index.html">Home</a>
    <p></p>
    <a href = "OOP/OOPmenu.html">OOP</a>
-   <p></p>
-   <a href="GUI/GUImenu.html">GUI</a>
    <p></p>
    <a href="Recursion/recursion.html">Recursion</a>
    <p></p>
@@ -43,9 +41,9 @@
     <h1>My Projects</h1>
     <p>This is a list of all my projects, organized from most recent to earliest project</p>
     <h1>Algorithm Implementation</h1>
-    <p>This is a project to discover different algorithms. I started with a few simple algorithms, and I am currently working on a fft implementation. The repository is <a href = "https://github.com/fengxiong322/Algorithm-Implementations">here</a></p>
+    <p>This is a project to discover different algorithms. I started with a few simple algorithms, and I am currently working on a fft implementation. The repository is <a href = "https://github.com/fengxiong322/Algorithm-Implementations" target = "_blank">here</a></p>
     <h1>Discord Bot</h1>
-    <p>Discord bot because honestly why not. Just a collection of games and other random functions. The code is currently very messy, and I plan on cleaning it up in the future. <a href = "https://github.com/fengxiong322/ISP11">Bot code</a></p>
+    <p>Discord bot because honestly why not. Just a collection of games and other random functions. The code is currently very messy, and I plan on cleaning it up in the future. <a href = "https://github.com/fengxiong322/randomDiscordBot" target = "_blank">Bot code</a></p>
     <h1>ISP 11</h1>
     <p>This is my isp. It runs a hangman game. You can find the repository <a href = "https://github.com/fengxiong322/ISP11" target = "_blank">here</a></p>
   </article>
