--- a/about.html
+++ b/about.html
@@ -2,18 +2,22 @@
 <html>
   <head>
     <title>About Me</title>
-    <base href = "https://fengxiong322.github.io/">
+    <base href = "fengxiong322.github.io\"><script type="text/javascript" src="interactions.js"></script>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="htmllayout.css">
+    <style type="text/css">
+      iframe{
+        width:100%;
+        height: 100%;
+      }
+    </style>
   </head>
 
-  <body>
-    <nav>
+  <body><nav>
+    <button class= "menubutton" onclick = "sideBar()"></button>
         <a href= "index.html">Home</a>
         <p></p>
         <a href = "OOP/OOPmenu.html">OOP</a>
-        <p></p>
-        <a href="GUI/GUImenu.html">GUI</a>
         <p></p>
         <a href="Recursion/recursion.html">Recursion</a>
         <p></p>
@@ -39,7 +43,7 @@
       </tr><tr>
         <td><a href = "OOP/OOPmenu.html">OOP</a></td>
       </tr><tr>
-        <td><a href="GUI/GUImenu.html">GUI</a></td>
+        <td></td>
       </tr><tr>
         <td><a href="Recursion/recursion.html">Recursion</a></td>
       </tr><tr>
@@ -55,11 +59,7 @@
   </aside>
 
   <article>
-    <p>Hello! My name is Feng, and this is my website. One of the reasons I created this website was to take a stab at explaining basic concepts of programming. I believe that to fully understand something, I must also be able to explain it clearly. However, I am always expanding this website, and it will go under continous development, to showcase my skills and to teach others new things.</p>
-    <p>I am a creative individual, and I love to work on programming projects. Not only can I come up with solutions to problems, I always go back and simplify my code. I believe that information should be free and clear. I make sure that I provide proper documentation to my files.</p>
-    <p>This currently contains most of my school work, that I have modified for public use. </p>
-    <p>Some of my acedemic interests are computer science, math, and physics. As hobbies, I enjoy playing basketball, and cross-country running</p>
-    <p>I've played around with many programming languages, but I prefer to use Java as my first choice.</p>
+    <iframe src="https://docs.google.com/document/d/e/2PACX-1vSPqIF_IQMYlodspgMvpe8gG03G9_nzBnNtpv7QoI_DFCGjMbLCx7YzAiD4SnYtsX_EOv9GqksUHvxv/pub?embedded=true"></iframe>
   </article>
 </section>
 
