--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 <html>
 	<head>
 		<title>Feng's Portfolio</title>
-		<base href = "https://fengxiong322.github.io/">
+		<base href = "fengxiong322.github.io\">
+    <script type="text/javascript" src="interactions.js"></script>
 		<link rel="stylesheet" href="htmllayout.css">
 		<link rel="icon" href="favicon.ico">
 	</head>
 
-	<body>
-		<nav>
+	<body><nav>
+		<button class= "menubutton" onclick = "sideBar()"></button>
 	   <a class = "current" href= "index.html">Home</a>
 	   <p></p>
 	   <a href = "OOP/OOPmenu.html">OOP</a>
-	   <p></p>
-	   <a href="GUI/GUImenu.html">GUI</a>
 	   <p></p>
 		 <a href="Recursion/recursion.html">Recursion</a>
 		 <p></p>
@@ -63,7 +62,9 @@
 <footer>
   <p>Created by Feng</p>
 </footer>
+<script>
 
+</script>
 </body>
 
 </html>
