--- a/OOP/OOP-FairyTales/OOPFairyTales.html
+++ b/OOP/OOP-FairyTales/OOPFairyTales.html
@@ -1,24 +1,26 @@
 <html>
    <head>
       <title>OOP In Fairy Tales</title>
-      <base href = "https://fengxiong322.github.io/">
+      <base href = "fengxiong322.github.io\"><script type="text/javascript" src="interactions.js"></script>
       <link rel="stylesheet" href="htmllayout.css">
       <style type="text/css">
-         body td{
+         article td, tr{
            width:100%;
            border-collapse:collapse;
-           background-color: #eaeaea;
            text-align: left;
          }
-         body #greentable{
+         article #greentable{
+               background-color: #000;
          border:1px solid #39f400;
          color:#39f400;
          }
-         body #yellowtable{
+         article #yellowtable{
+            background-color: #000;
          border:1px solid #fff200;
          color:#fff200;
          }
-         body #redtable{
+         article #redtable{
+            background-color: #000;
          border:1px solid #ff0000;
          color:#ff0000;
          }
@@ -28,13 +30,11 @@
          }
       </style>
    </head>
-   <body>
-      <nav>
+   <body><nav>
+      <button class= "menubutton" onclick = "sideBar()"></button>
          <a href= "index.html">Home</a>
          <p></p>
          <a class = "current" href = "OOP/OOPmenu.html">OOP</a>
-         <p></p>
-         <a href="GUI/GUImenu.html">GUI</a>
          <p></p>
     		 <a href="Recursion/recursion.html">Recursion</a>
     		 <p></p>
